overflow fix

--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,9 @@
 @mixin coverer {
   width: 100vw;
   height: 100vh;
+  min-height: -webkit-fill-available;
   position: absolute;
+  overflow: hidden;
   top: 0;
   left: 0;
 }
@@ -11,20 +13,13 @@
   text-align: center;
   width: 100vw;
   height: 100vh;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+  min-height: -webkit-fill-available;
+  overflow: hidden;
   &, video, .viewport-header {
     @include coverer;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
   }
   video {
     background: #1d1d1d;
-    -o-object-fit: cover;
     object-fit: cover;
   }
   .viewport-header {
@@ -50,6 +45,7 @@
 html, body {
   height: 100%;
   overflow-x: hidden;
+  min-height: -webkit-fill-available;
 }
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -94,8 +90,6 @@ main {
   max-height: 350px;
   overflow: hidden;
   align-items: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
 
   &__text {
     color: #fff;
